--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -26,13 +26,14 @@
     <nav class="clearfix">
       <button onclick="toggleMenu()">&#9776; Menu</button>
       <ul id="pureNav" class="hidden">
-          <li><a href="lesson11/index.html">Home</a></li>
-          <li><a href="lesson11/preston-10.html">Preston</a></li>
+          <li><a href="/lesson11/index.html">Home</a></li>
+          <li><a href="/lesson11/preston-10.html">Preston</a></li>
           <li><a href="#">Soda Springs</a></li>
           <li><a href="#">Fish Haven</a></li>
-          <li><a href="lesson8/stormcenter.html">Storm Center</a></li>
-          <li><a href="lesson7/gallery.html">Gallery</a></li>
+          <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
+          <li><a href="/lesson7/gallery.html">Gallery</a></li>
       </ul>
+  </nav>
   </nav>
         <main>
             <div class="containerForm">  
