--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -26,12 +26,12 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="pureNav" class="hidden">
-                <li><a href="/lesson11/index.html">Home</a></li>
-                <li><a href="/lesson11/preston-10.html">Preston</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
-                <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
-                <li><a href="/lesson7/gallery.html">Gallery</a></li>
+                <li><a href="stormcenter.html">Storm Center</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
 
