--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -28,8 +28,8 @@
             <ul id="pureNav" class="hidden">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="sodaSpring.html">Soda Springs</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
@@ -38,8 +38,8 @@
         <main>
             <div class="cards"></div>
             <section>
-                <img class="authorpic" src="images/tiwanaku.jpg" alt="More rocks">
-                <h3>Tiwanaku, La Paz</h3>
+                <img class="authorpic" src="images/prestionSmall.jpg" alt="More rocks">
+                <h3>Preston, City</h3>
                 <p>
                     (Spanish spellings: Tiahuanaco and Tiahuanacu) is an important Pre-Columbian archaeological site. Tiwanaku is recognized by Andean scholars as one of the most important precursors to the Inca Empire, flourishing as the ritual and administrative capital of a major state power for approximately five hundred years. The ruins of the ancient city state are near the south-eastern shore of Lake Titicaca, about 72 km (44 miles) west of La Paz.
                 What to See
