--- a/lesson11/sodaSpring.html
+++ b/lesson11/sodaSpring.html
@@ -37,9 +37,9 @@
             </ul>
         </nav>
         <main>
-            <h1>Preston City</h1>
+            <h1>Soda Spring City</h1>
             <section id="hero">
-                <img id="heroimg" src="images/prestonmain.jpg" alt="snowy picture">
+                <img id="heroimg" src="images/sodaMain.jpg" alt="snowy picture">
                 <div class="weatherinfo">
                     <h4>Weather Summary</h4>
                     <p class="left">Currently:</p><p class="right" id="currently">Cloudy</p>
@@ -69,8 +69,8 @@
                 <div id="temp5" class="temp">15 &#7506;F</div>
             </div>
             <section>
-                <img class="authorpic" src="images/prestionSmall.jpg" alt="More rocks">
-                <h3>Preston, City</h3>
+                <img class="authorpic" src="images/soda1.jpg" alt="More rocks">
+                <h3>Soda Spring City</h3>
                 <p>
                     (Spanish spellings: Tiahuanaco and Tiahuanacu) is an important Pre-Columbian archaeological site. Tiwanaku is recognized by Andean scholars as one of the most important precursors to the Inca Empire, flourishing as the ritual and administrative capital of a major state power for approximately five hundred years. The ruins of the ancient city state are near the south-eastern shore of Lake Titicaca, about 72 km (44 miles) west of La Paz.
                 What to See
@@ -87,7 +87,7 @@
         <div id="contact">
             <div id="map"></div>
             <div id="contactinfo">
-                <p><b>Preston</b></p>
+                <p><b>La Paz, Titicaca Lake</b></p>
                 <p><a href="https://www.google.com/maps/place/30+N+1st+E,+Preston,+ID+83263/@42.0970234,-111.875773,17z/data=!3m1!4b1!4m5!3m4!1s0x8754f7e967e1ebc7:0x14469667cfe31546!8m2!3d42.0970234!4d-111.8735843" target="_blank"><img src="images/location.svg" alt="location link"></a>10 N 1st E</p>
                 <p>La Paz, ID 25060</p>
                 <br>
