--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -28,8 +28,8 @@
       <ul id="pureNav" class="hidden">
           <li><a href="index.html">Home</a></li>
           <li><a href="preston.html">Preston</a></li>
-          <li><a href="#">Soda Springs</a></li>
-          <li><a href="#">Fish Haven</a></li>
+          <li><a href="sodaSpring.html">Soda Springs</a></li>
+          <li><a href="fishHaven.html">Fish Haven</a></li>
           <li><a href="stormcenter.html">Storm Center</a></li>
           <li><a href="gallery.html">Gallery</a></li>
       </ul>
