--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -15,6 +15,7 @@
     </head>
     
     <body>
+        <div id="alert"><p>Monday = Api with pastel in La Paz City!</p>  <p>10:00 a.m. Saturday in the center square.</p></div>
         <header >
             <div>
                 <img src="images/logo.jpg" alt="logo">
