--- a/lesson11/sodaSpring.html
+++ b/lesson11/sodaSpring.html
@@ -15,6 +15,7 @@
     </head>
     
     <body>
+        <div id="alert"><p>Monday = Api with pastel in La Paz City!</p>  <p>10:00 a.m. Saturday in the center square.</p></div>
         <header >
             <div>
                 <img src="images/logo.jpg" alt="logo">
@@ -109,7 +110,7 @@
             <br /> Last Updated: <span id="lastUpdated"></span>
             <script src="js/date.js"></script>
         </footer>
-    <script src="js/forecast.js"></script>
+    <script src="js/forecastSoda.js"></script>
     <script src="js/weatherapi.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     
