--- a/lesson11/fishHaven.html
+++ b/lesson11/fishHaven.html
@@ -111,9 +111,8 @@
             <script src="js/date.js"></script>
         </footer>
     <script src="js/forecastFish.js"></script>
-    <script src="js/weatherapi.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    
+    <script src="js/weatherapiFish.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>  
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzZlvUHOzSPXZdrEHpS5wpCnVtac8TxpY&callback=initMap"
     async defer></script>
     </body>
