--- a/lesson11/sodaSpring.html
+++ b/lesson11/sodaSpring.html
@@ -111,7 +111,7 @@
             <script src="js/date.js"></script>
         </footer>
     <script src="js/forecastSoda.js"></script>
-    <script src="js/weatherapi.js"></script>
+    <script src="js/weatherapiSoda.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzZlvUHOzSPXZdrEHpS5wpCnVtac8TxpY&callback=initMap"
