--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -39,27 +39,27 @@
             <div class="grid">
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/image4.jpg">
-                    <figcaption>Titicaca Lake</figcaption>
+                    <figcaption>Preston City</figcaption>
                 </figure>
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/image5.jpg">
-                    <figcaption>Titicaca Lake</figcaption>
+                    <figcaption>Soda Springs</figcaption>
                 </figure>
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/image2.jpg">
-                    <figcaption>Titicaca Lake</figcaption>
+                    <figcaption>Fish Haven</figcaption>
                 </figure>
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/image1.jpg">
-                    <figcaption>Uyuni Salar</figcaption>
+                    <figcaption>Preston City</figcaption>
                 </figure>
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/image3.jpg">
-                    <figcaption>Uyuni Salar</figcaption>
+                    <figcaption>Soda Springs</figcaption>
                 </figure>
                 <figure>
                     <img src="images/placeholder.jpg" data-src="images/image1.jpg">
-                    <figcaption>Uyuni Salar</figcaption>
+                    <figcaption>Fish Haven</figcaption>
                 </figure>
             </div>
         </main>
