--- a/lesson11/sodaSpring.html
+++ b/lesson11/sodaSpring.html
@@ -72,22 +72,45 @@
                 <img class="authorpic" src="images/soda1.jpg" alt="More rocks">
                 <h3>Soda Spring City</h3>
                 <p>
-                    (Spanish spellings: Tiahuanaco and Tiahuanacu) is an important Pre-Columbian archaeological site. Tiwanaku is recognized by Andean scholars as one of the most important precursors to the Inca Empire, flourishing as the ritual and administrative capital of a major state power for approximately five hundred years. The ruins of the ancient city state are near the south-eastern shore of Lake Titicaca, about 72 km (44 miles) west of La Paz.
-                What to See
-                The remains of a Pre-Incan civilization. This monumental city in the Bolivian highlands 13,000 feet above sea level and one of 754 recognized World Heritage Sites, Tiwanaku is surrounded by mountain ranges, with Lake Titicaca on its west side. The massive, solid blocks of a stone not indigenous to the flat plateau give rise to the site's nickname, "the Stonehenge of the Americas". The museum contains most of the amazing things built by the Tiwanakan people. A skeleton was recovered that is about 13,000 years old. This place is quite magical.
+                    Soda Spring's rich history is one we can all take pride in. We're talking about the heart of Lancashire, and not just geographically. Built on nearly 1,000 years of history, the city's unique charm draws in visitors from all around.
+                    Preston makes a fantastic place to spend your well-earned leisure time, offering a wide choice of things to do and see for all the family.
+                    Witness the awesome flight of a Falcon...
+Turbary Woods Owl and Bird of Prey Sanctuary makes a great day out for all the family and even offers experience days. The rescue and rehabilitation centre is home to an exciting collection of over 90 birds of prey, with knowledgable staff to fill you in on fascinating facts. All birds are housed in large open fronted aviaries within in a woodland setting.  
 
-                What to Do
-                Take as many pictures as you can. This site is beautiful, the architecture and style is impressive.
+Bird species include:
 
-                Things to Buy
-                Many indigenous women will be selling pottery, scarves, clothes, crafts and other handmade things. They do not really charge much, and these items are worth it for the price. You'll probably only come here once in your life, so you might want to make sure to buy things you'll have to remember.
+Owls
+Eagles
+Hawks
+Falcons
+Vultures
+Flying displays
+Flying displays take place throughout the week, weekends and school holidays, offering the chance to watch the birds take to the air. There's also the chance to gain hands on experience and knowledge about these amazing animals.
+
+Owl and Hawk experience days
+For those looking to get a little more up close and personal, why not book an experience day and get the opportunity to fly up to four different species, from owls to vultures!
+
+For details visit Turbary Woods Owl and Bird of Prey - Owl and Hawk Experience Days.
+
+Non-profit making
+Turbary woods is a pure volunteer based, non-profit making sanctuary. All money raised through visits and displays helps directly with the rescue and conservation of injured owls and birds of prey.
+
+For prices and opening times check out Turbary Owl and Bird of Prey Sanctuary.
+
+Follow on social media
+Facebook - Turbary Woods Owl and Bird of Prey Sanctuary
+Twitter - Turbary Woods Owl and Bird of Prey Sanctuary
+Instagram - Turbary Woods Owl and Bird of Prey Sanctuary
+Map address for Turbary Woods Owl and Bird of Prey
+Turbary Woods Owl and Bird of Prey Sanctuary, Turbary Woods, 92 Chain House Lane, Whitestake, Preston, PR4 4LB.
                 </p>
             </section>
+            <div class="events"></div>
         </main>
         <div id="contact">
             <div id="map"></div>
             <div id="contactinfo">
-                <p><b>La Paz, Titicaca Lake</b></p>
+                <p><b class ="countryName">Soda Springs</b></p>
                 <p><a href="https://www.google.com/maps/place/30+N+1st+E,+Preston,+ID+83263/@42.0970234,-111.875773,17z/data=!3m1!4b1!4m5!3m4!1s0x8754f7e967e1ebc7:0x14469667cfe31546!8m2!3d42.0970234!4d-111.8735843" target="_blank"><img src="images/location.svg" alt="location link"></a>10 N 1st E</p>
                 <p>La Paz, ID 25060</p>
                 <br>
@@ -110,10 +133,10 @@
             <br /> Last Updated: <span id="lastUpdated"></span>
             <script src="js/date.js"></script>
         </footer>
+    <script src="js/upcomingEvents.js"></script>    
     <script src="js/forecastSoda.js"></script>
     <script src="js/weatherapiSoda.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzZlvUHOzSPXZdrEHpS5wpCnVtac8TxpY&callback=initMap"
     async defer></script>
     </body>
