--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,28 +11,30 @@
     <script src="/js/main.js"></script>
     <title>First project BYUI</title>
 </head>
+
 <body>
-    <header class = 'mainheader'>
-        <p id="myname">Raul M. Laredo Soria</p> 
+    <header class='mainheader'>
+        <p id="myname">Raul M. Laredo Soria</p>
         <img src="img/Me.jpeg" alt="">
     </header>
     <main class="mainportal">
         <h2>CIT 230: Assignment Portal</h2>
         <hr>
         <ul>
-            <li>Lesson 02: <a href="design_principles.html">Design Principles Document</a> </li>
-            <li>Lesson 03: <a href="lesson3/index.html">Weather Site Plan</a></li>
-            <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
-            <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Town Page</a></li>
-            <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Town Page Update</a></li>
-            <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Load Page</a></li>
-            <li>Lesson 07: <a href="lesson7/gallery.html">Gallery Page</a></li>
-            <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Page</a></li>
-            <li>Lesson 08: <a href="lesson8/stormcenter.html">Storm Report</a></li>
-            <li>Lesson 09: <a href="lesson9/prophets.html">Prophets Page | </a> 
+            <li>L11: <a href="https://ramalaso.github.io/byui/final-project/index.html">Final Project</a> </li>
+            <li>L2: <a href="design_principles.html">Design Principles Document</a> </li>
+            <li>L3: <a href="lesson3/index.html">Weather Site Plan</a></li>
+            <li>L4: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
+            <li>L5: <a href="lesson5/preston-5.html">Preston Town Page</a></li>
+            <li>L6: <a href="lesson6/preston-6.html">Preston Town Page Update</a></li>
+            <li>L7: <a href="lesson7/lazyload.html">Lazy Load Page</a></li>
+            <li>L7: <a href="lesson7/gallery.html">Gallery Page</a></li>
+            <li>L8: <a href="lesson8/tablebuild.html">Table Page</a></li>
+            <li>L8: <a href="lesson8/stormcenter.html">Storm Report</a></li>
+            <li>L9: <a href="lesson9/prophets.html">Prophets Page | </a>
                 <a href="lesson9/index.html">Weather home page</a>
             </li>
-            <li>Lesson 10: <a href="lesson10/api-test.html">Weather API Test| </a> 
+            <li>L10: <a href="lesson10/api-test.html">Weather API Test| </a>
                 <a href="lesson10/preston-10.html">Preston Weather API</a>
             </li>
         </ul>
@@ -39,7 +42,8 @@
     <footer>
         <small>&copy; 2020 | Raul M. Laredo Soria | Utah | BYUI Online Learning</small> <br>
         <br /> Last Updated: <span id="lastUpdated"></span>
-            <script src="js/date.js"></script>
+        <script src="js/date.js"></script>
     </footer>
 </body>
+
 </html>
