--- a/index.html
+++ b/index.html
@@ -21,21 +21,22 @@
         <h2>CIT 230: Assignment Portal</h2>
         <hr>
         <ul>
-            <li>L11: <a href="https://ramalaso.github.io/byui/final-project/index.html">Final Project</a> </li>
-            <li>L2: <a href="design_principles.html">Design Principles Document</a> </li>
-            <li>L3: <a href="lesson3/index.html">Weather Site Plan</a></li>
-            <li>L4: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
-            <li>L5: <a href="lesson5/preston-5.html">Preston Town Page</a></li>
-            <li>L6: <a href="lesson6/preston-6.html">Preston Town Page Update</a></li>
-            <li>L7: <a href="lesson7/lazyload.html">Lazy Load Page</a></li>
-            <li>L7: <a href="lesson7/gallery.html">Gallery Page</a></li>
-            <li>L8: <a href="lesson8/tablebuild.html">Table Page</a></li>
-            <li>L8: <a href="lesson8/stormcenter.html">Storm Report</a></li>
-            <li>L9: <a href="lesson9/prophets.html">Prophets Page | </a>
-                <a href="lesson9/index.html">Weather home page</a>
+            <li>L11: <a href="https://ramalaso.github.io/byui/final-project/index.html" target="_blank">Final
+                    Project</a> </li>
+            <li>L2: <a href="design_principles.html" target="_blank">Design Principles Document</a> </li>
+            <li>L3: <a href="lesson3/index.html" target="_blank">Weather Site Plan</a></li>
+            <li>L4: <a href="lesson4/preston-4.html" target="_blank">Preston Town Page</a></li>
+            <li>L5: <a href="lesson5/preston-5.html" target="_blank">Preston Town Page</a></li>
+            <li>L6: <a href="lesson6/preston-6.html" target="_blank">Preston Town Page Update</a></li>
+            <li>L7: <a href="lesson7/lazyload.html" target="_blank">Lazy Load Page</a></li>
+            <li>L7: <a href="lesson7/gallery.html" target="_blank">Gallery Page</a></li>
+            <li>L8: <a href="lesson8/tablebuild.html" target="_blank">Table Page</a></li>
+            <li>L8: <a href="lesson8/stormcenter.html" target="_blank">Storm Report</a></li>
+            <li>L9: <a href="lesson9/prophets.html" target="_blank">Prophets Page | </a>
+                <a href="lesson9/index.html" target="_blank">Weather home page</a>
             </li>
-            <li>L10: <a href="lesson10/api-test.html">Weather API Test| </a>
-                <a href="lesson10/preston-10.html">Preston Weather API</a>
+            <li>L10: <a href="lesson10/api-test.html" target="_blank">Weather API Test| </a>
+                <a href="lesson10/preston-10.html" target="_blank">Preston Weather API</a>
             </li>
         </ul>
     </main>
