--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <hr>
         <ul>
             <li>L11: <a href="https://ramalaso.github.io/byui/final-project/index.html" target="_blank">Final
-                    Project</a> </li>
+                    Project - Salomon Rivers</a> </li>
+            <li>L12: <a href="https://ramalaso.github.io/byui/lesson11/index.html" target="_blank">Final
+                    Project - Bolivian Weather Center</a> </li>
             <li>L2: <a href="design_principles.html" target="_blank">Design Principles Document</a> </li>
             <li>L3: <a href="lesson3/index.html" target="_blank">Weather Site Plan</a></li>
             <li>L4: <a href="lesson4/preston-4.html" target="_blank">Preston Town Page</a></li>
