--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="img/Me.jpeg" alt="">
     </header>
     <main class="mainportal">
-        <h2>CIT 230: Assignment Portal</h2>
+        <h2>HTML, CSS, Javascript Portfolio</h2>
         <hr>
         <ul>
             <li>L11: <a href="https://ramalaso.github.io/byui/final-project/index.html" target="_blank">Final
