--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="/js/main.js"></script>
-    <title>First project BYUI</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
